Final commit before review

--- a/grid-opdracht.html
+++ b/grid-opdracht.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title>Les 3 - Opdracht CSS Grid</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <div class="container">
+        <div class="item" id="item-a">A</div>
+        <div class="item" id="item-b">B: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dolores earum fugit ipsum quo sit suscipit veniam vero? Ab accusantium aperiam deleniti itaque mollitia nihil possimus quam veniam. Accusamus adipisci consequatur eligendi explicabo id necessitatibus numquam quae quas sit temporibus! Assumenda at, cupiditate nihil officia tenetur ullam! Amet assumenda blanditiis consequatur deserunt dicta doloribus fugiat incidunt inventore ipsam itaque labore laborum laudantium molestias nesciunt nostrum, obcaecati porro provident quis rerum sapiente sed voluptatem, voluptates! Blanditiis cum debitis dolores ducimus, error excepturi ipsa labore mollitia nemo, nesciunt quae quisquam ratione rem repudiandae sed similique suscipit velit voluptas. Architecto dolore dolorum odio possimus quae quo voluptates. Assumenda consequuntur culpa dolorum ea illo minima nobis quae quam totam. Accusantium amet architecto atque aut autem cum cupiditate, delectus deleniti dignissimos dolore dolorem earum, esse et excepturi facilis fugit ipsam iure laudantium maiores nam natus neque possimus quidem repudiandae sit sunt, suscipit temporibus totam voluptatum.</div>
+        <div class="item" id="item-c">C</div>
+        <div class="item" id="item-d">D</div>
+        <div class="item" id="item-e">E</div>
+        <div class="item" id="item-f">F</div>
+    </div>
 </body>
 </html>
